--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invoicr",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "babel-preset-expo": "^12.0.11",
     "expo": "~52.0.0-preview.0",
+    "expo-constants": "^17.0.8",
+    "expo-linking": "^7.0.5",
+    "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.0-rc.6"
+    "react": "^18.3.1",
+    "react-native": "^0.76.0-rc.6",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
